test/Errors/type_mismatch.elab
Theorem bad_mismatch : Prop := fun x : Prop => x